examples/failing/f003-types-32bit.sq
{
    var x: u32;
    x = 4294967296;
}